fixed ext info actions including the displaying of ext info update changes no wrapping in row? headers for book info table

--- a/manga_db/webGUI/sass/style.scss
+++ b/manga_db/webGUI/sass/style.scss
@@ -295,6 +295,7 @@ hr {
 
     th {
         color: $scheme-invert-ter;
+        white-space: nowrap;
     }
 }
 // .button-leftmost {
